[project]
name = "sneha-learning"
version = "0.1.0"
description = "Learning notes and practice code for MLE + DE prep, June 2026."
requires-python = ">=3.12"
authors = [{name = "Sneha Agrawal", email = "snehaagrawal0214@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
  # --- Phase 1: Python internals + SQL + AWS/DE (Wk 1-3) ---
  "aiohttp>=3.9",          # async URL fetcher (Wk 1)
  "pandas>=2.2",           # pandas/numpy depth (Wk 2)
  "numpy>=1.26",
  "boto3>=1.34",           # AWS Glue / Bedrock (Wk 3, Phase 2)

  # --- Phase 2: ML track (Wk 4-5) ---
  "scikit-learn>=1.4",     # sklearn Pipeline + ColumnTransformer
  "xgboost>=2.0",          # gradient boosting on no-show data
  "mlflow>=2.12",          # experiment tracking
  "matplotlib>=3.8",       # EDA plots
  "streamlit>=1.33",       # metrics dashboard

  # --- Phase 2: LLM track (Wk 4-5) ---
  "sentence-transformers>=2.7",   # embeddings for FAISS demo
  "faiss-cpu>=1.8",               # vector index
  "pydantic>=2.6",                # structured JSON extraction / validation
]

[project.optional-dependencies]
dev = [
  "jupyterlab>=4.1",
  "ruff>=0.4",             # linting/formatting
]

[tool.uv]
# Lock file strategy: uv manages the lock automatically.
# Install: uv sync (creates .venv + installs from lock)
# Add packages: uv add <package>
# Update lock: uv lock
# Sync with lock: uv sync
